# test_tasks

./: .gitignore  README.md
library_management/: README.md  config.py  constants.py  crud.py  main.py  tests.py  utils.py
salary_bot/: .env.example  .gitignore  README.md  constants.py  create_bot.py  handlers.py  requirements.txt  run_bot.py  utils.py
tcp_server/: .gitignore  README.md  constants.py  main.py  server_logger.py  utils.py
tg_message_bot/: .env.example  README.md  docker-compose.yml  pyproject.toml
tg_message_bot/app/: Dockerfile  constants.py  db.py  main.py  models.py
tg_message_bot/nginx/: Dockerfile  nginx.conf
tg_message_bot/tg_bot/: Dockerfile  bot.py  constants.py  handlers.py
toad/: README.md  toads.py
weather_app/: README.md  city_coordinates_cache.sqlite  pytest.ini
weather_app/tests/test_users/: test_users_forms.py  test_users_urls.py  test_users_views.py
weather_app/tests/test_weather/: test_weather_urls.py  test_weather_utils.py  test_weather_views.py
